@@ -9,13 +9,13 @@ CubesViewer Documentation
 
 **For developers and integrators**:
 
-* [Installing the full CubesViewer application](cubesviewer/blob/master/doc/guide/installation.md)
-* [Configuring the Cubes data model](cubesviewer/blob/master/doc/guide/cubesviewer-model.md) (_to be done_)
-* Integrating CubesViewer views in other web applications (_to be done_)
+* [Installing the full CubesViewer application](installation.md)
+* [Configuring the Cubes data model](cubesviewer-model.md) - _to be done_
+* Integrating CubesViewer views in other web applications - _to be done_
 
-* Extending/customizing CubesViewer (_to be done_)
+* Extending/customizing CubesViewer - _to be done_
 
 **For final users**:
 
-* CubesViewer User Guide (_to be done_)
+* CubesViewer User Guide - _to be done_
 
