@@ -1,0 +1,195 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us" >
+<head>
+
+    <title>CubesViewer Embedded View Example</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="robots" content="NONE,NOARCHIVE" />
+
+	<link rel="stylesheet" href="../web/static/css/blueprint/screen.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="../web/static/css/blueprint/print.css" type="text/css" media="print">
+	<!--[if lt IE 8]> <link rel="stylesheet" href="../web/static/css/blueprint/ie.css" type="text/css" media="screen, projection"> <!¡[endif]-->
+
+	<link type="text/css" href="../web/static/css/jqueryui-cupertino/jquery-ui-1.9.2.custom.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../web/static/css/jqgrid/ui.jqgrid.css" />
+	<link type="text/css" href="../web/static/js/qtip/jquery.qtip.css" rel="stylesheet" />
+
+	<link rel="stylesheet" type="text/css" href="../web/static/css/cvapp.css" />
+	
+	
+	<script type="text/javascript" src="../web/static/js/dateformat/dateformat.js"></script>
+
+	<script type="text/javascript" src="../web/static/js/jquery/jquery-1.8.3.js"></script>
+	<script type="text/javascript" src="../web/static/js/jquery/jquery-ui-1.9.2.custom.min.js"></script>
+	<script type="text/javascript" src="../web/static/js/jquery/jquery.cookie.js"></script>
+	
+	<script type="text/javascript" src="../web/static/js/qtip/jquery.qtip.js"></script>
+
+	<script src="../web/static/js/jqgrid/i18n/grid.locale-en.js" type="text/javascript"></script>
+	<script src="../web/static/js/jqgrid/jquery.jqGrid.min.js" type="text/javascript"></script>
+
+    <script type="text/javascript" src="../web/static/js/cvapp.js"></script>      
+
+	
+	
+
+<link type="text/css" rel="stylesheet" href="../web/static/css/cubesviewer/cubesviewer.css" />    
+<link type="text/css" rel="stylesheet" href="../web/static/js/wiky/wiky.math.css" />    
+    
+<script type="text/javascript" src="../web/static/js/wiky/wiky.js"></script>
+<script type="text/javascript" src="../web/static/js/wiky/wiky.math.js"></script>
+<script type="text/javascript" src="../web/static/js/flotr2/flotr2.min.js"></script>
+
+<script type="text/javascript" src="../web/static/js/cubesviewer/cubesviewer.js"></script>
+<script type="text/javascript" src="../web/static/js/cubesviewer/cubesviewer.views.js"></script>
+<script type="text/javascript" src="../web/static/js/cubesviewer/cubesviewer.views.cube.js"></script>
+<script type="text/javascript" src="../web/static/js/cubesviewer/cubesviewer.views.cube.explore.js"></script>
+<script type="text/javascript" src="../web/static/js/cubesviewer/cubesviewer.views.cube.series.js"></script>
+<script type="text/javascript" src="../web/static/js/cubesviewer/cubesviewer.views.cube.chart.js"></script>
+
+<script type="text/javascript">
+	
+	// Initialize CubesViewer when document is ready
+	$(document).ready(function() {
+	    
+		cubesviewer.init({
+	        cubesUrl: "http://localhost:5000",
+	        ajaxLoaderUrl: "/static/img/ajax-loader.gif"
+	    });
+		
+		/*
+		cubesviewer.gui.init({
+	        user: "1",
+	        container: $('#cubesviewer').get(0),
+	        backendUrl: "http://localhost:8000/cubesviewer"
+		});
+		*/
+		
+	    // Start Cubesviewer system
+        cubesviewer.refresh();
+		
+	});
+	
+    // Add views
+    $(document).bind("cubesviewerModelLoaded", { }, function() {
+    	var view1 = cubesviewer.views.createView("olapview1", $('#olap-view1'), "cube", { "cubename": "support_issues" });	
+    	cubesviewer.views.redrawView (view1);
+    	
+    	var view2 = cubesviewer.views.createView("olapview2", $('#olap-view2'), "cube", { "cubename": "support_issues" }); 
+        cubesviewer.views.redrawView (view2);
+    });
+    
+
+	
+</script>
+  
+	
+<style type="text/css">
+td {
+    vertical-align: top;
+}
+</style>
+
+	
+</head>
+
+<body id="">
+	<div id="body">
+		
+        <table>
+            <tr>
+                <td>
+                    <div>
+
+<div id="header"  class="ui-widget ui-widget-content ui-corner-all">
+    <div style="float: left;">
+        <img id="cv-logo" title="CubesViewer" src="../web/static/img/cubesviewer-logo.png" />
+    </div>
+
+    <h1 id="site-name">CubesViewer Embedded Views Example</h1>
+
+    <div style="clear: both;"></div>
+</div>
+
+</div>
+                </td>
+            </tr>
+            <tr>
+                <td style="width: 100%; vertical-align: top;">
+                    
+<table><tr>             
+<td>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras et arcu ut augue porta elementum eget vitae tellus. Curabitur in libero vel mauris luctus lobortis. Duis ornare erat at arcu dignissim rhoncus. Sed eget est ac risus egestas egestas. Nullam sapien arcu, molestie non aliquam in, eleifend id magna. Donec convallis vulputate cursus. Praesent tempus semper gravida.
+</td><td>
+    Quisque eu ligula eu nibh ultricies condimentum. Integer ac nisl massa. Nam malesuada pellentesque tellus ac vehicula. Maecenas auctor condimentum luctus. Fusce sed vehicula eros. Proin eu ipsum eu leo hendrerit blandit. Mauris dignissim sem id libero fringilla mattis. Nam gravida neque ac tellus lacinia dictum. Morbi sed felis diam. Suspendisse volutpat odio non leo dignissim eu vehicula arcu consectetur. In auctor nibh non neque rutrum vitae faucibus elit posuere.
+</td><td>
+    Ut congue accumsan ornare. Integer vehicula feugiat risus iaculis facilisis. Nulla sodales enim mi. In porta, nunc nec tristique lacinia, leo magna fringilla tellus, a viverra eros metus consectetur neque. Proin sem tortor, tempus a malesuada sit amet, facilisis sed dolor. Duis eros justo, auctor eu rhoncus et, pretium at nibh. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut lacus dolor, dictum vel dignissim vel, mattis tempus leo. Cras feugiat rutrum dolor ac eleifend. Donec tempus purus id sapien convallis semper facilisis ante vulputate. Vestibulum lacinia risus pharetra orci sollicitudin ac laoreet libero pellentesque.
+</td></tr></table>
+
+<table><tr>             
+<td>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras et arcu ut augue porta elementum eget vitae tellus. Curabitur in libero vel mauris luctus lobortis. Duis ornare erat at arcu dignissim rhoncus. Sed eget est ac risus egestas egestas. Nullam sapien arcu, molestie non aliquam in, eleifend id magna. Donec convallis vulputate cursus. Praesent tempus semper gravida.
+</td><td colspan="2">
+    <div id="olap-view1" style="margin: 10px;" ></div>
+</td></tr></table>
+
+<table><tr>             
+<td>
+    Nullam venenatis, purus sed fermentum dictum, lorem sem euismod sem, sit amet sagittis massa lectus nec metus. Suspendisse nec diam ante, in sodales felis. Nullam in purus id nunc auctor fringilla non in sem. Vestibulum in felis nulla. Nullam urna est, cursus ac feugiat at, sagittis vel erat. Duis a lacus turpis, ut laoreet ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pharetra condimentum sagittis. Maecenas id orci vel libero commodo lacinia. Sed magna tellus, lobortis vel dignissim eu, tristique in mauris. Etiam fringilla, velit eu aliquet aliquet, erat nisi tincidunt massa, ac accumsan dolor magna quis tellus. Aenean nulla ipsum, pulvinar ut rhoncus laoreet, porttitor at arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse ac arcu turpis.
+</td><td>
+    Nunc eget quam ante, id tempus enim. Aenean dignissim est a est scelerisque aliquam sed ut nunc. Curabitur rutrum ultrices luctus. Maecenas tincidunt tortor ac nisi hendrerit at eleifend nunc placerat. Nunc feugiat velit nec sem placerat venenatis. Nunc feugiat varius metus eu suscipit. Praesent feugiat enim nec erat sollicitudin viverra. In et dolor sem, at imperdiet dui. Proin pretium volutpat nunc id vestibulum. Integer viverra sem nisl, a tincidunt nisi. Donec sem ligula, accumsan ut sodales quis, sollicitudin nec diam. Phasellus eu dui nisi.
+</td><td>
+    Nam nulla elit, viverra porttitor lobortis ut, porta at leo. Etiam tristique ipsum in nibh scelerisque aliquet. Duis dictum lobortis eros, et iaculis ipsum mollis id. Quisque eu eleifend eros. Quisque volutpat, ante non egestas molestie, diam elit congue massa, at hendrerit risus massa quis felis. Donec non vestibulum arcu. Nam vehicula neque at dui hendrerit fermentum. Aliquam felis odio, accumsan at volutpat a, dapibus nec mauris. Donec feugiat vulputate arcu, ut viverra est dapibus nec.
+</td></tr></table>
+
+<table><tr>             
+<td>
+    <div id="olap-view2" style="margin: 10px; "></div>
+</td><td colspan="2">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras et arcu ut augue porta elementum eget vitae tellus. Curabitur in libero vel mauris luctus lobortis. Duis ornare erat at arcu dignissim rhoncus. Sed eget est ac risus egestas egestas. Nullam sapien arcu, molestie non aliquam in, eleifend id magna. Donec convallis vulputate cursus. Praesent tempus semper gravida.
+</td></tr></table>
+
+
+
+<table><tr>             
+<td>
+    Nam tristique lectus vel sem consectetur dignissim. Cras consectetur mauris adipiscing mi tempor commodo. Sed mollis urna ut lectus condimentum lobortis. Nunc tristique varius dui et laoreet. Sed adipiscing turpis quis dolor sodales quis interdum urna volutpat. Quisque condimentum fringilla massa. Maecenas imperdiet adipiscing faucibus. Fusce bibendum, arcu id viverra vestibulum, neque orci bibendum massa, sed malesuada massa justo quis dui. Integer metus nibh, rutrum ut tempor eu, tempus ut diam. Aenean aliquam, sapien at auctor tempus, est turpis hendrerit elit, at hendrerit lectus nisl sit amet sem. Praesent aliquet lacinia mauris quis scelerisque.
+</td><td>
+    Donec sollicitudin facilisis enim, in adipiscing quam blandit molestie. Nulla laoreet aliquet posuere. Phasellus eget orci sit amet orci iaculis scelerisque. Nulla facilisi. Mauris magna eros, tempus eu auctor vitae, suscipit quis sapien. Integer eu nisl nulla, non auctor quam. Cras sed ligula ut dui facilisis imperdiet. Curabitur lorem neque, elementum vel pellentesque quis, volutpat eget urna. Sed at fermentum augue. Donec facilisis felis eu tortor varius sit amet consequat lorem convallis.
+</td><td>
+    Nam eget lorem augue, at rutrum ligula. Aliquam sodales luctus elit, sit amet auctor nibh dapibus vel. Cras aliquam interdum enim, vitae luctus enim ultrices a. Vivamus quis libero eu leo imperdiet scelerisque et sit amet augue. Donec suscipit semper justo ac pulvinar. Nullam sagittis cursus vehicula. Nulla facilisi. Donec enim lectus, aliquet sed condimentum non, dictum id nisi. Nulla facilisi. Quisque congue tristique risus, at semper dui volutpat et. Donec ullamcorper mauris ligula. Aliquam varius nibh vitae nisi ultrices imperdiet. Proin ornare, purus quis placerat fringilla, dolor nisl scelerisque eros, a aliquam ligula felis quis orci.
+</td></tr></table>
+
+<table><tr>             
+<td>
+Nam tristique lectus vel sem consectetur dignissim. Cras consectetur mauris adipiscing mi tempor commodo. Sed mollis urna ut lectus condimentum lobortis. Nunc tristique varius dui et laoreet. Sed adipiscing turpis quis dolor sodales quis interdum urna volutpat. Quisque condimentum fringilla massa. Maecenas imperdiet adipiscing faucibus. Fusce bibendum, arcu id viverra vestibulum, neque orci bibendum massa, sed malesuada massa justo quis dui. Integer metus nibh, rutrum ut tempor eu, tempus ut diam. Aenean aliquam, sapien at auctor tempus, est turpis hendrerit elit, at hendrerit lectus nisl sit amet sem. Praesent aliquet lacinia mauris quis scelerisque.
+</td><td>
+Donec sollicitudin facilisis enim, in adipiscing quam blandit molestie. Nulla laoreet aliquet posuere. Phasellus eget orci sit amet orci iaculis scelerisque. Nulla facilisi. Mauris magna eros, tempus eu auctor vitae, suscipit quis sapien. Integer eu nisl nulla, non auctor quam. Cras sed ligula ut dui facilisis imperdiet. Curabitur lorem neque, elementum vel pellentesque quis, volutpat eget urna. Sed at fermentum augue. Donec facilisis felis eu tortor varius sit amet consequat lorem convallis.
+</td><td>
+Nam eget lorem augue, at rutrum ligula. Aliquam sodales luctus elit, sit amet auctor nibh dapibus vel. Cras aliquam interdum enim, vitae luctus enim ultrices a. Vivamus quis libero eu leo imperdiet scelerisque et sit amet augue. Donec suscipit semper justo ac pulvinar. Nullam sagittis cursus vehicula. Nulla facilisi. Donec enim lectus, aliquet sed condimentum non, dictum id nisi. Nulla facilisi. Quisque congue tristique risus, at semper dui volutpat et. Donec ullamcorper mauris ligula. Aliquam varius nibh vitae nisi ultrices imperdiet. Proin ornare, purus quis placerat fringilla, dolor nisl scelerisque eros, a aliquam ligula felis quis orci.
+</td></tr></table>
+
+                </td>
+            </tr>
+        </table>
+        <div>
+        
+        
+<div id="footer" style="clear: both; padding-top: 20px;">
+	<div style="height: 1px; border-top: 1px solid #DDDDDD; padding-top: 4px;"></div> 
+	<div style="float: right; white-space: nowrap;">
+		<p style="vertical-align: middle;"> 
+		<a href="http://databrewery.org/" target="_blank"><img title="Powered by Databrewery Cubes" style="width: 30px; height: 30px;" src="../web/static/img/cubes-logo.png" /></a>
+		<img title="Powered by CubesViewer" style="width: 65px; height: 30px;" src="../web/static/img/cubesviewer-logo.png" />
+		</p>
+	</div>
+	<div>
+		<p>CubesViewer</p>
+	</div>
+</div>
+</div>    
+        		
+	</div>
+</body>
+
+</html>
